feat: consume function with node
We installed webpack and webpack cli using: `npm i -D webpack webpack-cli`.
We set them as devDependencies because the responsability for this packages
is to build the application, but they arent going to be use in the final
project. They are only needed for project updates.

--- a/package/package.json
+++ b/package/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "build": "webpack",
     "test": "npm test"
   },
   "keywords": [
@@ -11,5 +12,9 @@
     "library"
   ],
   "author": "NEXTIVA",
-  "license": "MIT"
+  "license": "MIT",
+  "devDependencies": {
+    "webpack": "^5.73.0",
+    "webpack-cli": "^4.10.0"
+  }
 }
