--- a/spa/package.json
+++ b/spa/package.json
@@ -14,7 +14,8 @@
     "@emotion/styled": "^11.9.3",
     "@mui/material": "^5.8.6",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "webpack-package": "file:../package"
   },
   "devDependencies": {
     "@babel/core": "^7.18.6",
