--- a/spa/package.json
+++ b/spa/package.json
@@ -21,6 +21,7 @@
     "@babel/core": "^7.18.6",
     "@babel/preset-react": "^7.18.6",
     "babel-loader": "^8.2.5",
+    "dotenv-webpack": "^7.1.1",
     "html-webpack-plugin": "^5.5.0",
     "webpack": "^5.73.0",
     "webpack-cli": "^4.10.0",
